# transformer-from-scratch

./: .gitattributes  .gitignore  README.md  app.py  decoder.py  decoder_layer.py  embedding.py  encoder_layer.py  layer_norm.py  notes.txt  pe.py  pyproject.toml  requirements.txt  seq2seq_model.pkl  transformer.py
models/: README.md
src/: bleu.py  decoder.py  decoder_layer.py  dropout.py  embedding.py  encoder.py  encoder_layer.py  ff_network.py  generator.py  linear.py  mha.py  run_inference.py  sdpa.py  tokenizer.py  train.py  train_seq2seq.py  train_tokenizer.py  transformer.py  translate.py  visualize.py  vocab_encoder.json  vocab_merges.json
src/inference/: generator.py  tokenizer.py
src/model/: __init__.py  decoder.py  decoder_layer.py  encoder.py  encoder_layer.py  ff_network.py  layer_norm.py  linear.py  masks.py  mha.py  sdpa.py  transformer.py  utils.py
src/training/: bleu.py  optimizer.py  train.py  train_seq2seq.py  train_tokenizer.py
tests/: test_embedding_grad.py  test_masks.py  test_sdpa.py
