[project]
name = "transformer-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "regex>=2026.1.15",
    "sacrebleu>=2.6.0",
    "tqdm>=4.66.0",
    "gradio>=4.0.0",
    "matplotlib>=3.8.0",
]
